Được tạo bằng Colaboratory

--- a/Learning.ipynb
+++ b/Learning.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOYyt//x9BqKpCBNpLJAeV0",
+      "authorship_tag": "ABX9TyPilVMH0cGKwPgHm1T6aB8D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,41 +29,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "OTdHtqhrVskA"
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n"
+        "import numpy as np\n",
+        "\n"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "v94cv4W6WvIk"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Mục mới"
-      ],
-      "metadata": {
-        "id": "G-Lq5AceWw5o"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Mục mới"
-      ],
-      "metadata": {
-        "id": "oGc-NJY2Wy1N"
-      }
     }
   ]
 }
